# phantomx_pincher_arm

./: README.md
phantomx_pincher_arm_control/: CMakeLists.txt  package.xml
phantomx_pincher_arm_control/config/: phantomx_pincher_arm_control.yaml  phantomx_pincher_arm_controllers_manager.yaml
phantomx_pincher_arm_control/launch/: phantomx_pincher_arm_control.launch
phantomx_pincher_arm_description/: README.md
phantomx_pincher_arm_description/meshes/: F2Bracket.stl  PincherBase.stl  PincherBicep.stl  PincherForeArm.stl  PincherWristGripper.stl
phantomx_pincher_arm_description/robots/: phantomx_pincher_arm.urdf.xacro
phantomx_pincher_arm_description/urdf/: arm_hardware.xacro  phantomx_pincher_arm.urdf.xacro  phantomx_pincher_arm.xacro  phantomx_pincher_gripper.xacro
phantomx_pincher_arm_gazebo/: CMakeLists.txt  package.xml
phantomx_pincher_arm_gazebo/config/: arm_controller.yaml
phantomx_pincher_arm_gazebo/launch/: phantomx_pincher_arm_world.launch
phantomx_pincher_arm_gazebo/scripts/: set_pose.py  setpose.py
phantomx_pincher_arm_ikfast_plugin/src/: phantomx_pincher_arm_ikfast_solver.cpp
phantomx_pincher_arm_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml
phantomx_pincher_arm_moveit_config/launch/: demo.launch  phantomx_pincher_arm_moveit_planning_execution.launch
